# web_project

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  alembic.ini  config.py  main.py  requirements.txt
app/main/: add_notes.html  archive_notes.html  budget.html  edit_note.html  header.html  index.html  modal_error.html  notes.html  search_note.html  svg.html  users.html
app/migrations/: env.py
app/models/: budget.py  db.py  notes.py  users.py
app/routes/: budget.py  notes.py  users.py
app/schemas/: notes.py  oauth2.py  users.py
app/utils/: .depend.py.swp  .depend.swp  budget.py  depend.py  notes.py  test.py  users.py
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  worker.py
backend/db/: budget.py  notes.py  users.py
backend/migrations/: env.py
backend/models/: budget.py  databases.py  db.py  db_test.py  notes.py  users.py
backend/routes/: budget.py  notes.py  users.py
backend/schemas/: budget.py  notes.py  users.py
backend/testing/: conftest.py  test_main.py
backend/ui/: add_company.html  edit_note.html  header.html  index.html  modal_error.html  my_notes.html  search_note.html
backend/ui/error/: 401.html  404.html  50x.html
backend/ui/scripts/: jquery.clearsearch.js  modal.js  modalNote.js
backend/ui/static/css/: style.css
backend/utils/: depend.py  parsing_text.py  user_block.py  worker.py
frontend/: Dockerfile  default.conf  jsconfig.json  nginx.conf
frontend/src/: budget.html  edit_note.html  header.html  index.html  modal_error.html  (+4 more)
scr/: main.py  requirements.txt
src/: Dockerfile  pyproject.toml
(+69 files in other folders)
